kubernetes/base-services/datahub/service-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: datahub-frontend-external
  namespace: data-services
spec:
  type: LoadBalancer
  ports:
    - name: ui
      port: 9002
      targetPort: 9002
      protocol: TCP
  selector:
    app.kubernetes.io/instance: datahub
    app.kubernetes.io/name: datahub-frontend
